--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,16 +1,76 @@
 {
+  "Management System" : "نظام الإدارة",
+  "Client" : "العميل",
   "Clients" : "العملاء",
+  "Income" : "الدخل",
   "Incomes" : "الايرادات",
   "Outcomes" : "المصروفات",
+  "Invoices" : "الفواتير",
+  "Invoice" : "الفاتورة",
+  "Invoice Setting" : "الإعدادات الفواتير",
+  "Payments Schedule" : "جدول الدفعات",
+  "Schedules" : "جدول المواعيد",
+  "Events" : "الفعاليات",
+  "Calendar" : "التقويم",
+  "Catalog" : "الاقسام",
+  "Payments" : "الدفعات",
+  "Reports" : "التقارير",
+  "Discounts" : "الخصومات",
+  "Finance" : "المالية",
+  "Settings" : "الإعدادات",
   "Users" : "المستخدمين",
+  "By Priority" : "الأولوية",
+  "Outdated Payments" : "الدفعات المتأخرة",
+  "Upcoming Payments" : "الدفعات القادمة",
+  "Today Payments" : "الدفعات اليومية",
+
 
   "Subcategory Name" : "اسم القسم الفرعي",
+  "Subcategory" : "القسم الفرعي",
   "Subcategories" : "الاقسام الفرعية",
   "Create Subcategory" : "إنشاء قسم فرعي",
   "Category" : "القسم",
   "Categories" : "الاقسام",
   "Category Name" : "اسم القسم",
   "Category Type" : "نوع القسم",
+  "Create Category" : "إنشاء قسم",
+  "Create a new category" : "إنشاء قسم جديد",
+  "Select a category type" : "حدد نوع القسم",
+  "Select A Preferred Category" : "حدد القسم المفضل",
+  "Create a new subcategory" : "إنشاء قسم فرعي جديد",
+  "choose a preffered type" : "اختر نوع القسم المفضل",
+  "Info about client" : "معلومات عن العميل",
+
+
+  "Create Income" : "إنشاء الدخل",
+  "Income Details" : "تفاصيل الدخل",
+  "General" : "عام",
+  "Payment Information" : "معلومات الدفع",
+  "Discount" : "الخصم",
+  "Final Amount" : "المبلغ النهائي",
+  "Payment Amount" : "المبلغ المدفوع",
+  "Additional Information" : "معلومات إضافية",
+  "Choose a type for payment" : "حدد نوع الدفعة",
+  "payment details" : "تفاصيل الدفع",
+  "Payment Type" : "نوع الدفعة",
+  "Payment Status" : "حالة الدفع",
+  "Paid once with no future payments" : "مدفوعة مرة واحدة فقط",
+  "Payment repeats on a schedule" : "دفع متكرر",
+  "Recurring Count" : "عدد المرات",
+  "please choose the total recurring payment count" : "اختر عدد المرات المطلوبة",
+  "Recurring Payments" : "الدفعات المتكررة",
+  "OneTime Payment" : "دفعة واحدة فقط",
+  "Next Payment" : "تاريخ الدفعة القادمة",
+  "Income Information" : "معلومات الدخل",
+  "Client Email" : "بريد العميل",
+  "Client Phone" : "رقم هاتف العميل",
+  "Remaining" : "المتبقي",
+  "Total Paid" : "المبلغ المدفوع",
+
+
+
+
+
 
   "Clients Management" : "إدارة العملاء",
   "Create Client" : "إنشاء عميل",
@@ -21,6 +81,7 @@
 
   "Client First" : "الاسم الاول",
   "Client Last" : "الاسم الاخير",
+  "Client Name" : "اسم العميل",
   "Full Name" : "الاسم الكامل",
   "Type" : "النوع",
   "Email" : "البريد الالكتروني",
@@ -28,6 +89,36 @@
   "Created At" : "تاريخ الانشاء",
   "Updated At" : "تاريخ التحديث",
   "Unknown" : "غير معروف",
-  "Save" : "حفظ"
+  "Save" : "حفظ",
+  "Clear" : "مسح",
+  "Filters" : "تصفية",
+  "All" : "الكل",
+  "From" : "من",
+  "To" : "الى",
+  "Cancel" : "الغاء",
+  "Apply" : "تطبيق",
+
+  "Generate dynamic invoice" : "إنشاء الفاتورة",
+  "Relation Info" : "معلومات عن العلاقة",
+  "Invoice Number" : "رقم الفاتورة",
+  "Invoice Detail" : "تفاصيل الفاتورة",
+  "Create Invoice" : "إنشاء الفاتورة",
+  "Amount" : "المبلغ",
+  "Paid" : "المبلغ المدفوع",
+  "Status" : "الحالة",
+  "Description" : "الوصف",
+  "Issue Date" : "تاريخ الاصدار",
+
+  "Total Paid Payments" : "إجمالي الدفعات المدفوعة",
+  "Sum all payments in " : " إجمالي الدفعات في",
+  "Total Outcome" : "إجمالي المصروفات",
+  "Total expenses in " : " إجمالي المصروفات في",
+  "Total Clients" : "إجمالي العملاء",
+  "New clients created in " : "",
+  "Profit" : "الربح",
+  "Total profit in " : " إجمالي الربح في",
+  "Total Upcoming Payments" : "إجمالي الدفعات القادمة",
+  "Total Paid Invoices" : "إجمالي الفواتير المدفوعة",
+  "Total Paid Invoices in " : " إجمالي الفواتير المدفوعة في"
 
 }
