--- a/lang/en.json
+++ b/lang/en.json
@@ -1,16 +1,74 @@
 {
+  "Management System" : "Management System",
+  "Client" : "Client",
   "Clients" : "Clients",
+  "Income" : "Income",
   "Incomes" : "Incomes",
   "Outcomes" : "Outcomes",
+  "Invoices" : "Invoices",
+  "Invoice" : "Invoice",
+  "Invoice Setting" : "Invoice Setting",
+  "Payments Schedule" : "Payments Schedule",
+  "Schedules" : "Schedules",
+  "Events" : "Events",
+  "Calendar" : "Calendar",
+  "Catalog" : "Catalog",
+  "Payments" : "Payments",
+  "Reports" : "Reports",
+  "Discounts" : "Discoounts",
+  "Finance" : "Finance",
+  "Settings" : "Settings",
   "Users"   : "Users",
+  "By Priority" : "By Priority",
+  "Outdated Payments" : "Outdated Payments",
+  "Upcoming Payments" : "Upcoming Payments",
+  "Today Payments" : "Today Payments",
+
 
   "Subcategory Name" : "Subcategory Name",
+  "Subcategory" : "Subcategory",
   "Subcategories" : "Subcategories",
   "Create Subcategory" : "Create Subcategory",
   "Category" : "Category",
   "Categories" : "Categories",
   "Category Name" : "Category Name",
   "Category Type" : "Category Type",
+  "Create Category" : "Create Category",
+  "Create a new category" : "Create a new category",
+  "Select a category type" : "Select a category type",
+  "Select A Preferred Category" : "Select A Preferred Category",
+  "Create a new subcategory" : "Create a new subcategory",
+  "choose a preffered type" : "choose a preffered type",
+  "Info about client" : "Info about client",
+
+  "Create Income" : "Create Income",
+  "Income Details" : "Income Details",
+  "General" : "General",
+  "Payment Information" : "Payment Informatiotion",
+  "Discount" : "Discount",
+  "Final Amount" : "Final Amount",
+  "Payment Amount" : "Payment Amount",
+  "Additional Information" : "Additional Information",
+  "Choose a type for payment" : "Choose a type for payment",
+  "payment details" : "payment details",
+  "Payment Type" : "Payment Type",
+  "Payment Status" : "Payment Status",
+  "Paid once with no future payments" : "Paid once with no future payments",
+  "Payment repeats on a schedule" : "Payment repeats on a schedule",
+  "Recurring Count" : "Recurring Count",
+  "please choose the total recurring payment count" : "please choose the total recurring payment count",
+  "Recurring Payments" : "Recurring Payments",
+  "OneTime Payment" : "OneTime Payment",
+  "Next Payment" : "Next Payment",
+  "Income Information" : "Income Information",
+  "Client Email" : "Client Email",
+  "Client Phone" : "Client Phone",
+  "Remaining" : "Remaining",
+  "Total Paid" : "Total Paid",
+
+
+
+
 
   "Clients Management" : "Clients Management",
   "Create Client" : "Create Client",
@@ -21,6 +79,7 @@
 
   "Client First" : "Client First",
   "Client Last" : "Client Last",
+  "Client Name" : "Client Name",
   "Full Name" : "Full Name",
   "Type" : "Type",
   "Email" : "Email",
@@ -28,5 +87,35 @@
   "Created At" : "Created At",
   "Updated At" : "Updated At",
   "Unknown" : "Unknown",
-  "Save" : "Save"
+  "Save" : "Save",
+  "All" : "All",
+  "Clear" : "Clear",
+  "Filters" : "Filters",
+  "From" : "From",
+  "To" : "To",
+  "Cancel" : "Cancel",
+  "Apply" : "Apply",
+
+  "Generate dynamic invoice" : "Generate dynamic invoice",
+  "Relation Info" : "Relation Info",
+  "Invoice Number" : "Invoice Number",
+  "Invoice Detail" : "Invoice Detail",
+  "Create Invoice" : "Create Invoice",
+  "Amount" : "Amount",
+  "Paid" : "Paid",
+  "Status" : "Status",
+  "Description" : "Description",
+  "Issue Date" : "Issue Date",
+
+  "Total Paid Payments" : "Total Paid Payments",
+  "Sum all payments in" : "Sum all payments in",
+  "Total Outcome" : "Total Outcome",
+  "Total expenses in" : "Total expenses in",
+  "Total Clients" : "Total Clients",
+  "New clients created in" : "New clients created in",
+  "Profit" : "Profit",
+  "Total profit in" : "Total profit in",
+  "Total Upcoming Payments" : "Total Upcoming Payments",
+  "Total Paid Invoices" : "Total Paid Invoices",
+  "Total Paid Invoices in" : "Total Paid Invoices in"
 }
